the Workshop first commit Assignment 1 + horizontal scroll fixed

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,6 +1,5 @@
 
 body{
-   max-width: 1400px;
    background: #262626;
    margin: auto;
 }
